--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,11 @@
             <version>3.6.0</version> <!-- 请使用最新的稳定版本 -->
         </dependency>
         <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.6</version>
+        </dependency>
+        <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-controls</artifactId>
             <version>20.0.1</version>
