压缩解压弹窗

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,10 @@ target/classes/com/example/final6205/sample.fxml
 target/classes/com/example/final6205/SimpleDeque$Node.class
 target/classes/com/example/final6205/SimpleDeque.class
 target/classes/module-info.class
+target/classes/com/example/final6205/dog.fxml
+target/classes/com/example/final6205/FileHistoryController.class
+target/classes/com/example/final6205/images (1).jpeg
+target/classes/com/example/final6205/RedBlackTree.class
+target/classes/com/example/final6205/SimpleHashMap.class
+target/classes/com/example/final6205/Sorter.class
+target/classes/com/example/final6205/TreeNode.class
